ci-test-diagnostics: document -XX:+EnableDynamicAgentLoading (all 4 repos)
Add the surefire test-fork guard against the JDK 21 'A Java agent has
been loaded dynamically' warning to the canonical CI-test-diagnostics
policy so it is documented once and stays synchronized across all four
sibling repos (each CLAUDE.md already points here).

The warning is emitted to the fork's native stderr when a test
self-attaches byte-buddy-agent (Mockito inline mock maker in BAF;
Lincheck model-checking instrumentation in jllama/sb/plugin) and can
intermittently corrupt Surefire's encoded fork channel — surfacing as
'Corrupted channel by directly writing to native stream' followed by a
bogus 'There was a timeout in the fork'. New section 2.1 explains the
mechanism, the trigger per repo, and the warning-vs-corruption frequency
distinction; the argLine shapes and per-repo wiring table are updated to
carry the flag. crossrepostatus row refreshed.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Y84TKMNfhbFGi7EoCEvP99